--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^1.0",
         "mpociot/laravel-test-factory-helper": "^1.2",
         "reliese/laravel": "^0.0.13",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "ext-gd": " *"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
