--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,16 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": " *",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
         "intervention/image": "^2.5",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "mpociot/laravel-test-factory-helper": "^1.2",
         "reliese/laravel": "^0.0.13",
-        "yajra/laravel-datatables-oracle": "~9.0",
-        "ext-gd": " *"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
