--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-gd": " *",
+        "delight-im/random": "^1.0",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
         "intervention/image": "^2.5",
