--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-gd": " *",
+        "barryvdh/laravel-snappy": "^0.4.6",
         "delight-im/random": "^1.0",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
+        "h4cc/wkhtmltoimage-i386": "0.12.x",
+        "h4cc/wkhtmltopdf-i386": "0.12.x",
         "intervention/image": "^2.5",
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.8.*",
