--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-gd": " *",
         "barryvdh/laravel-snappy": "^0.4.6",
+        "consoletvs/charts": "6.*",
         "delight-im/random": "^1.0",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
@@ -21,6 +22,7 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8.0",
+        "laraveldaily/laravel-charts": "^0.1.13",
         "mpociot/laravel-test-factory-helper": "^1.2",
         "reliese/laravel": "^0.0.13",
         "yajra/laravel-datatables-oracle": "~9.0"
