--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-gd": " *",
+        "anhskohbo/no-captcha": "^3.1",
         "barryvdh/laravel-snappy": "^0.4.6",
         "consoletvs/charts": "6.*",
         "delight-im/random": "^1.0",
