--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-gd": " *",
         "anhskohbo/no-captcha": "^3.3",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "barryvdh/laravel-snappy": "^0.4.6",
         "consoletvs/charts": "6.*",
         "delight-im/random": "^1.0",
